Minor Header Updates
Did some minor Visual changes with the headers.  Centered most.

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
-    <h1>Battleship Online</h1>
+    <h1 align="center">BATTLESHIP ONLINE</h1>
     <h2>Brendon King - CS 2550</h2>
-    <h3>About</h3>
+    <h3 align="center">About the Game</h3>
     <div class ="row">
         <div class="column">
             <p>Battleship is a guessing game for two players.  It is played on ruled grids concealed from the other player.  To better help you in this game of strategy and guesswork, both boards will be provided for you to keep track of shots fired, though it will not show you where the enemy ships are located.</p>
@@ -23,8 +23,8 @@
         </div>
     </div>
     <div>
-        <h3>Rules</h3>
-        <p>
+        <h3 align="center">Rules</h3>
+        <p> 
             <ol>
                 <li>Players first begin by placing ships strategically along the grid.  In the case of the computer, the ships will be placed randomly</li>
                 <li>Players will take turns firing at quadrants of the other team.</li>
