--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
     <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
-    <h1 align="center">BATTLESHIP ONLINE</h1>
+    <nav>
+        <a href="index.html">HOME</a>
+        <a href="gameboard.html">GAME</a>
+        <a href="contact.html">INFO</a>
+    </nav>
+    <h1>BATTLESHIP ONLINE</h1>
     <h3 align="center">About the Game</h3>
     <div class ="row">
         <div class="column">
