--- a/gameboard.html
+++ b/gameboard.html
@@ -31,10 +31,10 @@
               <th>1</th>
               <th></th>
               <th></th>
+              <th>x</th>
               <th></th>
-              <th>x</th>
-              <th>x</th>
-              <th>x</th>
+              <th></th>
+              <th></th>
               <th></th>
               <th></th>
               <th></th>
@@ -48,22 +48,22 @@
               <th></th>
               <th></th>
               <th></th>
+              <th>x</th>
               <th></th>
-              <th></th>
-              <th></th>
+              <th>[ ]</th>
               <th></th>
             </tr>
             <tr>
               <th>3</th>
               <th></th>
+              <th>[ ]</th>
+              <th>[ ]</th>
+              <th>[ ]</th>
+              <th>[ ]</th>
               <th></th>
               <th></th>
               <th></th>
-              <th></th>
-              <th></th>
-              <th></th>
-              <th></th>
-              <th></th>
+              <th>[ ]</th>
               <th></th>
             </tr>
             <tr>
@@ -72,15 +72,16 @@
               <th></th>
               <th></th>
               <th></th>
+              <th>x</th>
               <th></th>
+              <th>x</th>
               <th></th>
-              <th></th>
-              <th></th>
-              <th></th>
+              <th>[ ]</th>
               <th></th>
             </tr>
             <tr>
               <th>5</th>
+              <th>x</th>
               <th></th>
               <th></th>
               <th></th>
@@ -89,18 +90,17 @@
               <th></th>
               <th></th>
               <th></th>
-              <th></th>
-              <th></th>
+              <th>x</th>
             </tr>
             <tr>
               <th>6</th>
               <th></th>
+              <th>[ ]</th>
+              <th>[ ]</th>
+              <th>[ ]</th>
               <th></th>
               <th></th>
-              <th></th>
-              <th></th>
-              <th></th>
-              <th></th>
+              <th>[ ]</th>
               <th></th>
               <th></th>
               <th></th>
@@ -112,21 +112,21 @@
               <th></th>
               <th></th>
               <th></th>
-              <th></th>
-              <th></th>
-              <th></th>
+              <th>x</th>
+              <th>[x]</th>
+              <th>x</th>
               <th></th>
               <th></th>
             </tr>
             <tr>
               <th>8</th>
+              <th>x</th>
               <th></th>
               <th></th>
               <th></th>
               <th></th>
               <th></th>
-              <th></th>
-              <th></th>
+              <th>[x]</th>
               <th></th>
               <th></th>
               <th></th>
@@ -135,11 +135,11 @@
               <th>9</th>
               <th></th>
               <th></th>
+              <th>x</th>
               <th></th>
               <th></th>
               <th></th>
-              <th></th>
-              <th></th>
+              <th>[ ]</th>
               <th></th>
               <th></th>
               <th></th>
@@ -150,12 +150,12 @@
               <th></th>
               <th></th>
               <th></th>
+              <th>x</th>
               <th></th>
               <th></th>
               <th></th>
-              <th></th>
-              <th></th>
-              <th></th>
+              <th>[ ]</th>
+              <th>[ ]</th>
             </tr>
           </table>
         </div>
@@ -198,7 +198,7 @@
               <th></th>
               <th></th>
               <th></th>
-              <th></th>
+              <th>x</th>
               <th></th>
             </tr>
             <tr>
@@ -220,9 +220,9 @@
               <th></th>
               <th></th>
               <th></th>
+              <th>x</th>
               <th></th>
-              <th></th>
-              <th></th>
+              <th>x</th>
               <th></th>
               <th></th>
               <th></th>
@@ -232,7 +232,7 @@
               <th></th>
               <th></th>
               <th></th>
-              <th></th>
+              <th>x</th>
               <th></th>
               <th></th>
               <th></th>
@@ -244,14 +244,14 @@
               <th>6</th>
               <th></th>
               <th></th>
+              <th>x</th>
+              <th></th>
+              <th>x</th>
+              <th>x</th>
               <th></th>
               <th></th>
-              <th></th>
-              <th></th>
-              <th></th>
-              <th></th>
-              <th></th>
-              <th></th>
+              <th>[x]</th>
+              <th>[x]</th>
             </tr>
             <tr>
               <th>7</th>
@@ -273,7 +273,7 @@
               <th></th>
               <th></th>
               <th></th>
-              <th></th>
+              <th>x</th>
               <th></th>
               <th></th>
               <th></th>
@@ -288,7 +288,7 @@
               <th></th>
               <th></th>
               <th></th>
-              <th></th>
+              <th>x</th>
               <th></th>
               <th></th>
             </tr>
@@ -308,5 +308,6 @@
           </table>
         </div>
     </div>
+    <h4>CONTROLS</h4>
 </body>
 </html>
