--- a/index.html
+++ b/index.html
@@ -9,11 +9,6 @@
     <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
-    <nav>
-        <a href="index.html">HOME</a>
-        <a href="gameboard.html">GAME</a>
-        <a href="contact.html">INFO</a>
-    </nav>
     <h1>BATTLESHIP ONLINE</h1>
     <h3 align="center">About the Game</h3>
     <div class ="row">
@@ -23,7 +18,9 @@
             <p>Click on the link <a href="gameboard.html">here</a> to begin setting up the board and start playing!</p>
         </div>
         <div class="column">
+            <p></p>
             <img src="media/static/battleship.jpg" alt="Image failed to load." border="5" width="450px">
+            <div align="center">A Navy Battleship</div>
         </div>
     </div>
     <div>
