--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         </div>
         <div class="column">
             <p></p>
-            <img src="media/static/battleship.jpg" alt="Image failed to load." border="5" width="450px">
-            <div align="center">A Navy Battleship</div>
+            <img src="media/static/battleship.jpg" alt="Image failed to load." border="5" width="425px" text-align="center">
+            <div>A Navy Battleship</div>
         </div>
     </div>
     <div>
@@ -32,7 +32,7 @@
                 <li>If the quadrant contains a ship, the player make fire again until missing</li>
                 <li>The game will end once one player loses all of their ships.</li>
                 <li>Once the game is over and the victor has been decided, an option will appear to start the same game again or replace the ships.</li>
-                <li>Have fun and happy hunting!</li>
+                <li>Have fun!</li>
             </ol>
         </p>
     </div>
