--- a/gameboard.html
+++ b/gameboard.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
-    <h1 align="center">COMMAND YOUR FLEET!</h1>
+    <h1 align="center">PLAY BATTLESHIP!</h1>
     <div class ="row">
         <div class ="column">
           <h4>Your Board</h4>
