Added JSON game state to gameboard.html
Added the game state for future reference and to finish the first assignment.

--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
         <div class="column">
             <p>Battleship is a guessing game for two players.  It is played on ruled grids concealed from the other player.  To better help you in this game of strategy and guesswork, both boards will be provided for you to keep track of shots fired, though it will not show you where the enemy ships are located.</p>
             <p>The rules of the game have been provided to you, in case any sort of refresher was needed.  Your ships can be placed horizontally or vertically, but they cannot be placed diagonally.</p>
-            <p>Click on the link <a href="gameboard.html">here</a> to begin setting up the board and start playing!</p>
+            <p>If you want more information on the game as a whole (not necessarily online), then click the link <a href="https://en.wikipedia.org/wiki/Battleship_(game)" target="_blank">here</a> for more information</p>
+            <p>Click on the link <a href="gameboard.html" target="_blank">here</a> to begin setting up the board and start playing!</p>
         </div>
         <div class="column">
             <p></p>
             <img src="media/static/battleship.jpg" alt="Image failed to load." border="5" width="425px" text-align="center">
-            <div>A Navy Battleship</div>
+            <div>A Navy Battleship - Wikipedia 2017</div>
         </div>
     </div>
     <div>
         <h3 align="center">Rules</h3>
-        <p> 
             <ol>
                 <li>Players first begin by placing ships strategically along the grid.  In the case of the computer, the ships will be placed randomly</li>
                 <li>Players will take turns firing at quadrants of the other team.</li>
@@ -34,7 +34,7 @@
                 <li>Once the game is over and the victor has been decided, an option will appear to start the same game again or replace the ships.</li>
                 <li>Have fun!</li>
             </ol>
-        </p>
+        <p style="font-size: 8px">All links and images used in accordance with copyright law</p>
     </div>
 </body>
 </html>
