--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 Name       :Brendon King
 Class      :CS 2550
 Title      :Battleship
+Version    :Version 02
 Description:Semester project for CS 2550 at Utah Valley University.
 -->
 <!DOCTYPE html>
@@ -12,7 +13,7 @@ Description:Semester project for CS 2550 at Utah Valley University.
     <title>Battleship Online</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="styles/main.js"></script>
 </head>
 <body>
     <h1>BATTLESHIP ONLINE</h1>
