--- a/gameboard.html
+++ b/gameboard.html
@@ -12,8 +12,8 @@ Description:Semester project for CS 2550 at Utah Valley University.
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Splash!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script type="text/javascript" src="styles/main.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css" />
+    <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
     <h1 align="center">PLAY BATTLESHIP!</h1>
