Fixed Links/Updated README

--- a/gameboard.html
+++ b/gameboard.html
@@ -13,7 +13,7 @@ Description:Semester project for CS 2550 at Utah Valley University.
     <title>Splash!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css" />
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="scripts/main.js"></script>
 </head>
 <body>
     <h1 align="center">PLAY BATTLESHIP!</h1>
@@ -345,86 +345,86 @@ Description:Semester project for CS 2550 at Utah Valley University.
         ["10 ","   ","   ","   ","   ","   ","   ","   ","   ","   ","   "],
     ],
     "CarrierP1":{
-        "Name": "Carrier", 
+        "Name": "Carrier",
         "MaxHealth": 5,
-        "CurrentHealth": 5, 
-        "StartPoint": "E1", 
-        "isVertical":false, 
+        "CurrentHealth": 5,
+        "StartPoint": "E1",
+        "isVertical":false,
         "isDestroyed":false,
     },
     "CarrierP2":{
-        "Name": "Carrier", 
+        "Name": "Carrier",
         "MaxHealth": 5,
-        "CurrentHealth": 5, 
-        "StartPoint": "A1", 
-        "isVertical":true, 
+        "CurrentHealth": 5,
+        "StartPoint": "A1",
+        "isVertical":true,
         "isDestroyed":false,
     },
     "BattleshipP1":{
-        "Name": "Battleship", 
+        "Name": "Battleship",
         "MaxHealth": 4,
-        "CurrentHealth": 3, 
-        "StartPoint": "G6", 
-        "isVertical":true, 
+        "CurrentHealth": 3,
+        "StartPoint": "G6",
+        "isVertical":true,
         "isDestroyed":false,
-    },    
+    },
     "BattleshipP2":{
-        "Name": "Battleship", 
+        "Name": "Battleship",
         "MaxHealth": 4,
-        "CurrentHealth": 4, 
-        "StartPoint": "B3", 
-        "isVertical":true, 
+        "CurrentHealth": 4,
+        "StartPoint": "B3",
+        "isVertical":true,
         "isDestroyed":false,
     },
     "SubmarineP1":{
-        "Name": "Submarine", 
+        "Name": "Submarine",
         "MaxHealth": 3,
-        "CurrentHealth": 3, 
-        "StartPoint": "I2", 
-        "isVertical":true, 
+        "CurrentHealth": 3,
+        "StartPoint": "I2",
+        "isVertical":true,
         "isDestroyed":false,
     },
     "SubmarineP2":{
-        "Name": "Submarine", 
+        "Name": "Submarine",
         "MaxHealth": 3,
-        "CurrentHealth": 3, 
-        "StartPoint": "J7", 
-        "isVertical":true, 
+        "CurrentHealth": 3,
+        "StartPoint": "J7",
+        "isVertical":true,
         "isDestroyed":false,
     },
     "DestroyerP1":{
-        "Name": "Destroyer", 
+        "Name": "Destroyer",
         "MaxHealth": 3,
-        "CurrentHealth": 3, 
-        "StartPoint": "C3", 
-        "isVertical":false, 
+        "CurrentHealth": 3,
+        "StartPoint": "C3",
+        "isVertical":false,
         "isDestroyed":false,
     },
     "DestroyerP2":{
-        "Name": "Destroyer", 
+        "Name": "Destroyer",
         "MaxHealth": 3,
-        "CurrentHealth": 2, 
-        "StartPoint": "F8", 
-        "isVertical":true, 
+        "CurrentHealth": 2,
+        "StartPoint": "F8",
+        "isVertical":true,
         "isDestroyed":false,
     },
     "PatrolBoatP1":{
-        "Name": "Patrol Boat", 
+        "Name": "Patrol Boat",
         "MaxHealth": 2,
-        "CurrentHealth": 2, 
-        "StartPoint": "I10", 
-        "isVertical":false, 
+        "CurrentHealth": 2,
+        "StartPoint": "I10",
+        "isVertical":false,
         "isDestroyed":false,
     },
     "PatrolBoatP2":{
-        "Name": "Patrol Boat", 
+        "Name": "Patrol Boat",
         "MaxHealth": 2,
-        "CurrentHealth": 0, 
-        "StartPoint": "I6", 
-        "isVertical":false, 
+        "CurrentHealth": 0,
+        "StartPoint": "I6",
+        "isVertical":false,
         "isDestroyed":true,
     },
-    
+
     "gameIsOver": false,
 }
 </pre>
