Organized the media.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Description:Semester project for CS 2550 at Utah Valley University.
         </div>
         <div class="column">
             <p></p>
-            <img src="media/static/battleship.jpg" alt="Image failed to load." border="5" width="425px" text-align="center">
+            <img src="media/images/battleship.jpg" alt="Image failed to load." border="5" width="425px" text-align="center">
             <div>A Navy Battleship - Wikipedia 2017</div>
         </div>
     </div>
