--- a/gameboard.html
+++ b/gameboard.html
@@ -315,7 +315,14 @@ Description:Semester project for CS 2550 at Utah Valley University.
           </table>
         </div>
     </div>
-    <h4>CONTROLS</h4>
+    <div class="row">
+      <div class="column">
+        <h4>SELECT PLAYERS</h4>
+      </div>
+      <div class="column">
+        <h4>PLACE SHIPS</h4>
+      </div>
+    </div>
     <h4>JSON GAME STATE</h4>
     <pre>GameState{
     "BoardP1":[
