--- a/gameboard.html
+++ b/gameboard.html
@@ -18,23 +18,20 @@ Description:Semester project for CS 2550 at Utah Valley University.
 <body>
     <h1 align="center">PLAY BATTLESHIP!</h1>
     <div class ="row">
-        <div id="Player1Board "class ="column" align="center">
+        <div id="Player1" class ="column" align="center">
           <h4>Your Board</h4>
-          <script src="scripts/board.js">
-            GenerateTable
+          <script>
+            GenerateTable();
+          </script>
+          <h4>Opponent Board</h4>
+          <script>
+            GenerateTable();
           </script>
         </div>
-        <div id="Player2Board" class ="column" align="center">
-          <h4>Opponent Board</h4>
+        <div class ="column" align="center">
+          <h4>CONTROLS</h4>
         </div>
     </div>
-    <div class="row">
-      <div class="column">
-        <h4>SELECT PLAYERS</h4>
-      </div>
-      <div class="column">
-        <h4>PLACE SHIPS</h4>
-      </div>
-    </div>
+    <script type="text/javascript" src="scripts/board.js"></script>
 </body>
 </html>
