--- a/gameboard.html
+++ b/gameboard.html
@@ -9,11 +9,11 @@ Description:Semester project for CS 2550 at Utah Valley University.
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Splash!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css" />
-    <script type="text/javascript" src="scripts/board.js"></script>
+    <script src="scripts/board.js"></script>
+    <script src="scripts/battleship.js"></script>
 </head>
 <body>
     <h1 align="center">PLAY BATTLESHIP!</h1>
