--- a/gameboard.html
+++ b/gameboard.html
@@ -21,11 +21,11 @@ Description:Semester project for CS 2550 at Utah Valley University.
         <div id="Player1" class ="column" align="center">
           <h4>Your Board</h4>
           <script>
-            GenerateTable();
+            GenerateTable(11,11);
           </script>
           <h4>Opponent Board</h4>
           <script>
-            GenerateTable();
+            GenerateTable(11,11);
           </script>
         </div>
         <div class ="column" align="center">
