Began working on Game Logic Controls

--- a/gameboard.html
+++ b/gameboard.html
@@ -23,13 +23,37 @@ Description:Semester project for CS 2550 at Utah Valley University.
           <script>
             GenerateTable(11,11);
           </script>
+          <p></p>
+          <table>
+            <tr>
+              <td style="background:green"><p>S</p></td>
+              <td style="background:red"><p>H</p></td>
+              <td style="background:darkblue"><p>M</p></td>
+            </tr>
+          </table>
           <h4>Opponent Board</h4>
           <script>
             GenerateTable(11,11);
           </script>
+          <p></p>
+          <table>
+            <tr>
+              <td style="background:green"><p>S</p></td>
+              <td style="background:red"><p>H</p></td>
+              <td style="background:darkblue"><p>M</p></td>
+            </tr>
+          </table>
         </div>
-        <div class ="column" align="center">
+        <div class ="column">
           <h4>CONTROLS</h4>
+          <div class="controls">
+            <h4>GAME MANAGEMENT</h4>
+            <button>PLACE SHIPS</button>
+            <button>SAVE GAME</button>
+            <button>LOAD GAME</button>
+            <button>CHANGE DIRECTION</button>
+            <button></button>
+          </div>
         </div>
     </div>
     <script type="text/javascript" src="scripts/board.js"></script>
