Redone File Hierarchy

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ Description:Semester project for CS 2550 at Utah Valley University.
     <title>Battleship Online</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css" />
-    <script type="text/javascript" src="scripts/main.js"></script>
+    <script type="text/javascript" src="scripts/site/main.js"></script>
 </head>
 <body>
     <h1>BATTLESHIP ONLINE</h1>
