--- a/gameboard.html
+++ b/gameboard.html
@@ -12,8 +12,9 @@ Description:Semester project for CS 2550 at Utah Valley University.
     <title>Splash!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css" />
-    <script src="scripts/board.js"></script>
-    <script src="scripts/battleship.js"></script>
+    <script src="scripts/battleship/views.js"></script>
+    <script src="scripts/battleship/models.js"></script>
+    <script src="scripts/battleship/controllers.js"></script>
 </head>
 <body>
     <h1 align="center">PLAY BATTLESHIP!</h1>
