--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--
 Name       :Brendon King
 Class      :CS 2550
-Title      :Battleship
+Title      :Battleship/index.html
 Version    :Version 02
 Description:Semester project for CS 2550 at Utah Valley University.
 -->
