--- a/gameboard.html
+++ b/gameboard.html
@@ -45,7 +45,7 @@ Description:Semester project for CS 2550 at Utah Valley University.
             </tr>
           </table>
         </div>
-        <div class ="column">
+        <div class ="column", id="controls">
           <h4>CONTROLS</h4>
           <div class="controls">
             <h4>GAME MANAGEMENT</h4>
@@ -57,6 +57,5 @@ Description:Semester project for CS 2550 at Utah Valley University.
           </div>
         </div>
     </div>
-    <script type="text/javascript" src="scripts/board.js"></script>
 </body>
 </html>
