Updated User Login

--- a/gameboard.html
+++ b/gameboard.html
@@ -48,12 +48,12 @@ Description:Semester project for CS 2550 at Utah Valley University.
         <div class ="column", id="controls">
           <h4>CONTROLS</h4>
           <div class="controls">
-            <h4>PLAYER INFORMATION</h4>
+            <h4>PLAYER LOGIN</h4>
             <form>
-              <label>Name:</label>
-              <input type="text" name="playerName"><br>
+              <input type="text" name="userName\t" style="align:Right"><br>
+              <input type="password" name="userPass\t"><br>
             </form>
-            
+
             <h4>GAME MANAGEMENT</h4>
             <button>PLACE SHIPS</button>
             <button>SAVE GAME</button>
