--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 Name       :Brendon King
 Class      :CS 2550
 Title      :Battleship/index.html
-Version    :Version 02
+Version    :Version 03
 Description:Semester project for CS 2550 at Utah Valley University.
 -->
 <!DOCTYPE html>
@@ -22,7 +22,7 @@ Description:Semester project for CS 2550 at Utah Valley University.
             <p>Battleship is a guessing game for two players.  It is played on ruled grids concealed from the other player.  To better help you in this game of strategy and guesswork, both boards will be provided for you to keep track of shots fired, though it will not show you where the enemy ships are located.</p>
             <p>The rules of the game have been provided to you, in case any sort of refresher was needed.  Your ships can be placed horizontally or vertically, but they cannot be placed diagonally.</p>
             <p>If you want more information on the game as a whole (not necessarily online), then click the link <a href="https://en.wikipedia.org/wiki/Battleship_(game)" target="_blank">here</a> for more information</p>
-            <p>Click on the link <a href="gameboard.html" target="_blank">here</a> to begin setting up the board and start playing!</p>
+            <p>Click on the link <a href="board.html" target="_blank">here</a> to begin setting up the board and start playing!</p>
         </div>
         <div class="column">
             <p></p>
