--- a/board.html
+++ b/board.html
@@ -28,7 +28,7 @@ Description:Semester project for CS 2550 at Utah Valley University.
           <p></p>
           <table>
             <tr>
-              <td style="background:#008000"><p>Ship</p></td>
+              <td style="background:lightgray"><p>Ship</p></td>
               <td style="background:#ff0000"><p>Hit</p></td>
               <td style="background:#000069"><p style="color: white">Miss</p></td>
             </tr>
