--- a/board.html
+++ b/board.html
@@ -13,9 +13,9 @@ Description:Semester project for CS 2550 at Utah Valley University.
     <title>Splash!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css" />
-    <script src="scripts/battleship/view.js"></script>
-    <script src="scripts/battleship/model.js"></script>
-    <script src="scripts/battleship/controller.js"></script>
+    <script src="scripts/game/view.js"></script>
+    <script src="scripts/game/model.js"></script>
+    <script src="scripts/game/controller.js"></script>
 </head>
 <body>
     <h1 align="center">PLAY BATTLESHIP!</h1>
