--- a/board.html
+++ b/board.html
@@ -54,6 +54,9 @@ Description:Semester project for CS 2550 at Utah Valley University.
             <button></button>
           </div>
         </div>
+        <div class="column", id="statistics">
+
+        </div>
     </div>
 </body>
 </html>
