Cleaned up index.html syntax errors

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ Description:Semester project for CS 2550 at Utah Valley University.
         </div>
         <div class="column">
             <p></p>
-            <img src="media/images/battleship.jpg" alt="Image failed to load." border="" width="425" text-align="center">
+            <img src="media/images/battleship.jpg" alt="Image failed to load." border="5" width="425" text-align="center">
             <div>A Navy Battleship - Wikipedia 2017</div>
         </div>
     </div>
