--- a/board.html
+++ b/board.html
@@ -1,4 +1,4 @@
-<!--
+﻿<!--
 Name       :Brendon King
 Class      :CS 2550
 Title      :Battleship/board.html
@@ -22,10 +22,12 @@ Description:Semester project for CS 2550 at Utah Valley University.
     <div class ="row">
         <div id="Player1" class ="column" align="center">
           <h4>Your Board</h4>
-          <script>
-            GenerateTable(11,11, 1);
-          </script>
-          <p></p>
+          <div id="Player1Board">
+              <script>
+                  GenerateTable(11, 11, 1);
+              </script>
+          </div>
+            <p></p>
           <table>
             <tr>
               <td style="background:lightgray"><p>Ship</p></td>
@@ -34,9 +36,11 @@ Description:Semester project for CS 2550 at Utah Valley University.
             </tr>
           </table>
           <h4>Opponent Board</h4>
-          <script>
-            GenerateTable(11,11, 2);
-          </script>
+          <div id="Player2Board">
+              <script>
+                  GenerateTable(11, 11, 2);
+              </script>
+          </div>
         </div>
         <div class ="column", id="controls">
           <h4>CONTROLS</h4>
