--- a/board.html
+++ b/board.html
@@ -10,7 +10,7 @@ Description:Semester project for CS 2550 at Utah Valley University.
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Splash!</title>
+    <title>Ready the Fleet!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css" />
     <script src="scripts/game/view.js"></script>
@@ -55,7 +55,6 @@ Description:Semester project for CS 2550 at Utah Valley University.
             <button onclick="ThrowAlert()">SAVE GAME</button>
             <button onclick="ThrowAlert()">LOAD GAME</button>
             <button onclick="ThrowAlert()">CHANGE DIRECTION</button>
-            <button></button>
           </div>
         </div>
         <div class="column", id="statistics">
