Added icon to tab

--- a/board.html
+++ b/board.html
@@ -11,6 +11,7 @@ Description:Semester project for CS 2550 at Utah Valley University.
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Ready the Fleet!</title>
+    <link rel="icon" href="media/images/battleship-icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css" />
     <script src="scripts/game/view.js"></script>
