--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@ Description:Semester project for CS 2550 at Utah Valley University.
 <html>
 <head>
     <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Battleship Online</title>
+    <link rel="icon" href="media/images/battleship-icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css" />
     <script type="text/javascript" src="scripts/site/main.js"></script>
