Finished building Login for board.html

--- a/board.html
+++ b/board.html
@@ -48,10 +48,12 @@ Description:Semester project for CS 2550 at Utah Valley University.
           <div class="controls">
             <h4>PLAYER LOGIN</h4>
             <form>
-                <b>Username:</b><br />
+                <b>Username:</b><br>
                 <input type="text" name="userName\t"><br>
-                <b>Password:</b>
+                <b>Password:</b><br>
                 <input type="password" name="userPass\t"><br>
+                <button style="float:right" onclick="ThrowAlert()">SIGN IN</button>
+                <br>
             </form>
             <h4>GAME MANAGEMENT</h4>
             <button onclick="ThrowAlert()">PLACE SHIPS</button>
