Created animation on index.html

--- a/board.html
+++ b/board.html
@@ -1,4 +1,4 @@
-﻿<!--
+<!--
 Name       :Brendon King
 Class      :CS 2550
 Title      :Battleship/board.html
@@ -87,6 +87,7 @@ Description:Semester project for CS 2550 at Utah Valley University.
             </table>
         </div>
     </div>
+    <div id="debug" class="debug"></div>
     <script src="scripts/game/view.js"></script>
     <script src="scripts/game/model.js"></script>
     <script src="scripts/game/controller.js"></script>
