--- a/checkpoint.html
+++ b/checkpoint.html
@@ -37,10 +37,11 @@ Description:Semester project for CS 2550 at Utah Valley University.
     <li>Load save needs to be added</li>
     <li>Reset board needs to be added</li>
     <li>Computer Fleet needs to be designed to randomly populate board</li>
-    <li>Still need to design an aesthetically-pleasing notification center so that messages can be presented to the player</li>
+    <li>Still need to design an aesthetically-pleasing notification center so that messages can be presented to the player (currently messaeges arrive through the console or as text on the site with no consideration to current elements.</li>
 </ul>
 <h2>FIXME</h2>
 <ul>
     <li>Player ships can be placed on top of each other</li>
     <li>Computer ships do not load correctly (or at all)</li>
+    <li>JSON configuration is not reading correctly when served.</li>
 </ul>
