Deleted unused files from filesystem

--- a/board.html
+++ b/board.html
@@ -20,7 +20,7 @@ Description:Semester project for CS 2550 at Utah Valley University.
     <div class="controls">
         <h4>GAME MANAGEMENT</h4>
         <button id="start-game">START GAME</button>
-        <button id="load-game" style="float:">LOAD GAME</button>
+        <button id="load-game">LOAD GAME</button>
         <button id="save-game">SAVE GAME</button>
 
         <h4>SHIP PLACEMENT</h4>
