Created login page

--- a/board.html
+++ b/board.html
@@ -19,9 +19,19 @@ Description:Semester project for CS 2550 at Utah Valley University.
     <h1 align="center">PLAY BATTLESHIP!</h1>
     <div class="controls">
         <h4>GAME MANAGEMENT</h4>
-        <button id="start-game">START GAME</button>
-        <button id="load-game">LOAD GAME</button>
-        <button id="save-game">SAVE GAME</button>
+        <div class="row">
+            <div class="column">
+                <button id="start-game">START GAME</button>
+                <button id="load-game">LOAD GAME</button>
+                <button id="save-game">SAVE GAME</button>
+            </div>
+            <div class="column">
+                <button id="login-button" onclick="displayLogin()">LOGIN</button>
+                <button id="clear-button">CLEAR DATA</button>
+            </div>
+        </div>
+
+
 
         <h4>SHIP PLACEMENT</h4>
         <div class="row">
