--- a/login.html
+++ b/login.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,6 +7,7 @@
     <script src="scripts/game/model.js"></script>
     <script src="scripts/game/view.js"></script>
     <script src="scripts/game/controller.js"></script>
+    <script src="scripts/site/login.js"></script>
 </head>
 <body>
     <b>Username:</b>
